--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@ body {
 
 <h1>Introduction to Blockchain Security Practices</h1>
 
-<h2>Doug Hoyte</h2>
+<h2>Doug Hoyte, March 2019</h2>
 
 
 <div class="lesson">
