--- a/lesson1/preimage.html
+++ b/lesson1/preimage.html
@@ -7,20 +7,20 @@ div { margin-top: 20px; }
 
 <script src="./sha1.js"></script>
 
-I chose a secret number and this is its SHA1 hash:
+<div>Reverse a hash and discover a secret number. Your submission should just be the number.</div>
+
+<div>I chose a secret number and this is its SHA1 hash:</div>
 
 <pre>
 f0501dc19c8aa8925e88f6044d49555b575b65b5
 </pre>
 
-<div>What is my secret number?</div>
-
-<div>HINT: I always choose numbers less than 1 million.</div>
+<div>HINT: It's less than 1 million.</div>
 
 <div>
   <ol>
-    <li>Open the console (control-shift-j)</li>
-    <li>In the console, run the following: <pre>sha1("1")</pre></li>
-    <li>NOTE: The sha1 function needs strings, not numbers</li>
+    <li>You can do this lab right here in your browser. Open the console (control-shift-j)</li>
+    <li>Try the number 1: <pre>&gt; sha1("1")</pre></li>
+    <li>NOTE: The sha1 function takes strings, not numbers</li>
   </ol>
 </div>
