--- a/lesson1/vanity-address.html
+++ b/lesson1/vanity-address.html
@@ -13,8 +13,8 @@ ul > li {
 
 <ul>
   <li>Make sure you generate your private key safely!</li>
+  <li>Make sure your random number is actually a valid private key</li>
   <li>HINT: Use <a href="https://www.npmjs.com/package/ethereumjs-util">ethereumjs-util</a> JavaScript package
   <li>Don't use the privateToAddress method: hash and truncate manually</li>
-  <li>Make sure your random number is actually a valid private key</li>
-  <li>BONUS: What is the probability your neighbour generates the same address as you?</li>
+  <li>BONUS: Assuming sha3(x) is uniformly distributed, what is the probability your neighbour generates the same address as you?</li>
 </ul>
