--- a/lesson1/index.html
+++ b/lesson1/index.html
@@ -63,7 +63,7 @@
 
 *Doug Hoyte, March 2019*
 
-[https://bit.ly/2Wf9p8v](https://bit.ly/2Wf9p8v)
+[https://is.gd/blockchainsec](https://is.gd/blockchainsec)
 
 </script></section>
 
@@ -192,6 +192,7 @@ Linear Congruential Generator (LCG)
 
 * For crypto, always use a secure random number generator provided by your environment or OS
   * Web-browser: `window.crypto.getRandomValues()`
+  * node.js: `crypto.randomBytes()`
   * Linux/OS X: `/dev/urandom`
   * Windows: `RtlGenRandom`
 
@@ -266,7 +267,7 @@ $h = H(m)$
 
 * Be careful when anonymizing names/IPs/emails/etc by hashing
 * If there aren't that many possible secrets, you can just try all of them
-* Lab 1: [preimage.html](preimage.html)
+* Exercise: [preimage.html](preimage.html)
   * So much for "one-way" function
  
 </script></section>
@@ -525,7 +526,7 @@ On blockchains, almost always **elliptic curves**
 
 <section data-markdown><script type="text/template">
 
-## Lab 2: Vanity Address
+## Lab 1: Vanity Address
 
 [vanity-address.html](vanity-address.html)
 
