--- a/lesson2/index.html
+++ b/lesson2/index.html
@@ -76,7 +76,7 @@
 
 *Doug Hoyte, March 2019*
 
-[https://bit.ly/2Wf9p8v](https://bit.ly/2Wf9p8v)
+[https://is.gd/blockchainsec](https://is.gd/blockchainsec)
 
 </script></section>
 
@@ -297,7 +297,7 @@
 
 <section data-markdown><script type="text/template">
 
-## Demo: Let's look at some real transactions
+## Exercise: Let's look at some real transactions
 
 [example-transactions.html](example-transactions.html)
 
@@ -422,7 +422,7 @@ Then run:
 
 <section data-markdown><script type="text/template">
 
-## Lab 3: Query node directly
+## Lab 2: Query node directly
 
 [query-jsonrpc.html](query-jsonrpc.html)
 
@@ -550,7 +550,7 @@ After ganache-cli is started, change metamask to point to it (instead of the mai
 
 <section data-markdown><script type="text/template">
 
-## Lab 4: Creating transactions
+## Lab 3: Creating transactions
 
 [creating-transactions.html](creating-transactions.html)
 
