--- a/index.html
+++ b/index.html
@@ -24,8 +24,8 @@ body {
   <ul>
     <li>Demo: <a href="lesson1/dice.html">dice.html</a></li>
     <li>Demo: <a href="lesson1/randviz.html">randviz.html</a></li>
-    <li>Lab 1: <a href="lesson1/preimage.html">preimage.html</a></li>
-    <li>Lab 2: <a href="lesson1/vanity-address.html">vanity-address.html</a></li>
+    <li>Exercise: <a href="lesson1/preimage.html">preimage.html</a></li>
+    <li>Lab 1: <a href="lesson1/vanity-address.html">vanity-address.html</a></li>
   </ul>
 </div>
 
@@ -33,13 +33,15 @@ body {
 <div class="lesson">
   <h3>Lesson 2: Blockchain Architecture</h3>
 
+<!--
   <a href="lesson2/index.html">Slides</a>
 
   <ul>
-    <li>Demo: <a href="lesson2/example-transactions.html">example-transactions.html</a></li>
-    <li>Lab 3: <a href="lesson2/query-jsonrpc.html">query-jsonrpc.html</a></li>
-    <li>Lab 4: <a href="lesson2/creating-transactions.html">creating-transactions.html</a></li>
+    <li>Exercise: <a href="lesson2/example-transactions.html">example-transactions.html</a></li>
+    <li>Lab 2: <a href="lesson2/query-jsonrpc.html">query-jsonrpc.html</a></li>
+    <li>Lab 3: <a href="lesson2/creating-transactions.html">creating-transactions.html</a></li>
   </ul>
+-->
 </div>
 
 
