--- a/lesson1/preimage.html
+++ b/lesson1/preimage.html
@@ -7,7 +7,7 @@ div { margin-top: 20px; }
 
 <script src="./sha1.js"></script>
 
-<div>Reverse a hash and discover a secret number. Your submission should just be the number.</div>
+<div>Reverse a hash and discover a secret number.</div>
 
 <div>I chose a secret number and this is its SHA1 hash:</div>
 
@@ -19,7 +19,7 @@ f0501dc19c8aa8925e88f6044d49555b575b65b5
 
 <div>
   <ol>
-    <li>You can do this lab right here in your browser. Open the console (control-shift-j)</li>
+    <li>You can do this exercise right here in your browser. Open the console (control-shift-j)</li>
     <li>Try the number 1: <pre>&gt; sha1("1")</pre></li>
     <li>NOTE: The sha1 function takes strings, not numbers</li>
   </ol>
