--- a/lesson1/vanity-address.html
+++ b/lesson1/vanity-address.html
@@ -15,6 +15,6 @@ ul > li {
   <li>Make sure you generate your private key safely!</li>
   <li>Make sure your random number is actually a valid private key</li>
   <li>HINT: Use <a href="https://www.npmjs.com/package/ethereumjs-util">ethereumjs-util</a> JavaScript package
-  <li>Don't use the privateToAddress method: hash and truncate manually</li>
-  <li>BONUS: Assuming sha3(x) is uniformly distributed, what is the probability your neighbour generates the same address as you?</li>
+  <li>Don't use the privateToAddress method: use privateToPublic and keccak256</li>
+  <li>Extra to think about: Assuming sha3(x) is uniformly distributed, what is the probability your neighbour generates the same address as you?</li>
 </ul>
