--- a/index.html
+++ b/index.html
@@ -33,15 +33,13 @@ body {
 <div class="lesson">
   <h3>Lesson 2: Blockchain Architecture</h3>
 
-<!--
   <a href="lesson2/index.html">Slides</a>
 
   <ul>
     <li>Exercise: <a href="lesson2/example-transactions.html">example-transactions.html</a></li>
-    <li>Lab 2: <a href="lesson2/query-jsonrpc.html">query-jsonrpc.html</a></li>
-    <li>Lab 3: <a href="lesson2/creating-transactions.html">creating-transactions.html</a></li>
+    <li>Exercise: <a href="lesson2/jsonrpc-query.html">jsonrpc-query.html</a></li>
+    <li>Lab 2: <a href="lesson2/creating-transactions.html">creating-transactions.html</a></li>
   </ul>
--->
 </div>
 
 
