--- a/lesson2/jsonrpc-query.html
+++ b/lesson2/jsonrpc-query.html
@@ -5,6 +5,12 @@ div { margin-top: 20px; }
 input { width: 600px; }
 </style>
 
+
+<h2>Query JSON RPC</h2>
+
+<b>Make sure you have ganache running!</b>
+
+
 <script>
 function doQuery() {
   fetch(document.getElementById('url').value, {
