--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@ body {
   <a href="lesson2/index.html">Slides</a>
 
   <ul>
-    <li>Exercise: <a href="lesson2/example-transactions.html">example-transactions.html</a></li>
+    <li>Demo: <a href="lesson2/example-transactions.html">example-transactions.html</a></li>
     <li>Exercise: <a href="lesson2/jsonrpc-query.html">jsonrpc-query.html</a></li>
     <li>Lab 2: <a href="lesson2/creating-transactions.html">creating-transactions.html</a></li>
   </ul>
