--- a/lesson2/index.html
+++ b/lesson2/index.html
@@ -310,7 +310,7 @@
 
 <section data-markdown><script type="text/template">
 
-## Exercise: Let's look at some real transactions
+## Demo: Let's look at some real transactions
 
 [example-transactions.html](example-transactions.html)
 
@@ -439,6 +439,7 @@ Then run:
 
 * Make sure ganache is running
 * Try querying the balance of some accounts
+* How to convert that big hex number to ETH?
 * What about accounts that don't exist? Do they throw errors?
 
 </script></section>
